[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/turret/turret-2.png" type="Texture" id=1]
[ext_resource path="res://scenes/turret/turret.gd" type="Script" id=2]
[ext_resource path="res://scenes/turret/gun-barrel.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0167

[node name="Turret" type="KinematicBody2D"]
rotation = -1.5708
z_index = 50
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 2 )
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5, 3 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="GunBarrel1" parent="." instance=ExtResource( 3 )]
position = Vector2( 22, -13 )
z_index = -1

[node name="GunBarrel2" parent="." instance=ExtResource( 3 )]
position = Vector2( 22, 17 )
z_index = -1

[node name="GunTimer1" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GunTimer2" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="timeout" from="GunTimer1" to="." method="_on_GunTimer1_timeout"]
[connection signal="timeout" from="GunTimer2" to="." method="_on_GunTimer2_timeout"]
